--- a/StartScreen.qrc
+++ b/StartScreen.qrc
@@ -1,4 +1,5 @@
 <RCC>
-    <qresource prefix="StartScreen">
-    </qresource>
+  <qresource prefix="images">
+    <file>background.jpg</file>
+  </qresource>
 </RCC>
