--- a/LoadGame.ui
+++ b/LoadGame.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="page_pick_file">
        <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,1">
@@ -166,12 +166,8 @@
               <enum>QFrame::Shadow::Raised</enum>
              </property>
              <layout class="QHBoxLayout" name="horizontalLayout_5">
-              <item alignment="Qt::AlignmentFlag::AlignRight">
-               <widget class="QLabel" name="label_date">
-                <property name="text">
-                 <string>Data w grze jakby się udało, można np. po prostu pod przycisk play dać zmiane daty o tydzień</string>
-                </property>
-               </widget>
+              <item>
+               <widget class="QTextBrowser" name="label_date"/>
               </item>
              </layout>
             </widget>
@@ -188,7 +184,7 @@
               <item>
                <widget class="QStackedWidget" name="stackedWidget_content">
                 <property name="currentIndex">
-                 <number>0</number>
+                 <number>1</number>
                 </property>
                 <widget class="QWidget" name="page_table">
                  <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -322,12 +318,137 @@
                        </column>
                        <item row="0" column="0">
                         <property name="text">
-                         <string>Tottenham</string>
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="0" column="1">
+                        <property name="text">
+                         <string/>
                         </property>
                        </item>
                        <item row="1" column="0">
                         <property name="text">
-                         <string>Arsenal</string>
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="1" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="2" column="0">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="2" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="3" column="0">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="3" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="4" column="0">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="4" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="5" column="0">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="5" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="6" column="0">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="6" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="7" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="8" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="9" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="10" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="11" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="12" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="13" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="14" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="15" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="16" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="17" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="18" column="1">
+                        <property name="text">
+                         <string/>
+                        </property>
+                       </item>
+                       <item row="19" column="1">
+                        <property name="text">
+                         <string/>
                         </property>
                        </item>
                       </widget>
