dobry wygląd, i enter działa żeby przechodzić do następnych textEditów

--- a/NewGame.qrc
+++ b/NewGame.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="field">
+    <file>images/middleaged-soccer-manager-wearing-a-suit-is-looking-a.jpg</file>
     <file>images/soccer_field.png</file>
   </qresource>
 </RCC>
