--- a/NewGame.ui
+++ b/NewGame.ui
@@ -15,17 +15,44 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
+      <property name="lineWidth">
+       <number>0</number>
+      </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="page_create_team">
-       <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,1">
+       <property name="styleSheet">
+        <string notr="true">#page_create_team{
+background-image: url(:/field/images/middleaged-soccer-manager-wearing-a-suit-is-looking-a.jpg);
+background-position: center;
+}</string>
+       </property>
+       <layout class="QVBoxLayout" name="verticalLayout" stretch="1,0,1">
         <item>
          <spacer name="verticalSpacer">
           <property name="orientation">
            <enum>Qt::Orientation::Vertical</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Policy::Expanding</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
@@ -37,55 +64,197 @@
         </item>
         <item alignment="Qt::AlignmentFlag::AlignHCenter|Qt::AlignmentFlag::AlignVCenter">
          <widget class="QFrame" name="frame_2">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">#frame_2 {
+    background-color: rgb(106, 106, 106);
+    border-radius: 20px;        /* Promień zaokrąglenia */
+    padding: 10px;              /* Wewnętrzne marginesy */
+    border: 10px solid rgb(48, 48, 48);  /* Grubość, styl i kolor ramki */
+}</string>
+          </property>
           <property name="frameShape">
            <enum>QFrame::Shape::StyledPanel</enum>
           </property>
           <property name="frameShadow">
-           <enum>QFrame::Shadow::Raised</enum>
+           <enum>QFrame::Shadow::Plain</enum>
+          </property>
+          <property name="lineWidth">
+           <number>20</number>
+          </property>
+          <property name="midLineWidth">
+           <number>10</number>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
            <item>
             <widget class="QLabel" name="label_5">
+             <property name="tabletTracking">
+              <bool>false</bool>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">font: 600 italic 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);</string>
+             </property>
              <property name="text">
               <string>Enter your save name</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QTextEdit" name="textEdit_save_name"/>
+            <widget class="QTextEdit" name="textEdit_save_name">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>20</width>
+               <height>20</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>50</height>
+              </size>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(203, 203, 203);
+    border-radius: 20px;        /* Promień zaokrąglenia */
+    padding: 10px;              /* Wewnętrzne marginesy */
+	border-color: rgb(0, 0, 0);
+font: 600 italic 10pt &quot;Segoe UI&quot;;
+</string>
+             </property>
+             <property name="autoFormatting">
+              <set>QTextEdit::AutoFormattingFlag::AutoNone</set>
+             </property>
+             <property name="tabChangesFocus">
+              <bool>false</bool>
+             </property>
+             <property name="undoRedoEnabled">
+              <bool>true</bool>
+             </property>
+             <property name="lineWrapMode">
+              <enum>QTextEdit::LineWrapMode::NoWrap</enum>
+             </property>
+             <property name="acceptRichText">
+              <bool>false</bool>
+             </property>
+            </widget>
            </item>
            <item>
             <widget class="QLabel" name="label">
+             <property name="styleSheet">
+              <string notr="true">font: 600 italic 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);</string>
+             </property>
              <property name="text">
               <string>Enter your name</string>
              </property>
             </widget>
            </item>
-           <item>
-            <widget class="QTextEdit" name="textEdit_player_name"/>
+           <item alignment="Qt::AlignmentFlag::AlignVCenter">
+            <widget class="QTextEdit" name="textEdit_player_name">
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>50</height>
+              </size>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(203, 203, 203);
+    border-radius: 20px;        /* Promień zaokrąglenia */
+    padding: 10px;              /* Wewnętrzne marginesy */
+	border-color: rgb(0, 0, 0);
+font: 600 italic 10pt &quot;Segoe UI&quot;;</string>
+             </property>
+             <property name="acceptRichText">
+              <bool>false</bool>
+             </property>
+            </widget>
            </item>
            <item>
             <widget class="QLabel" name="label_3">
+             <property name="styleSheet">
+              <string notr="true">font: 600 italic 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);</string>
+             </property>
              <property name="text">
               <string>Enter your team name</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QTextEdit" name="textEdit_team_name"/>
+            <widget class="QTextEdit" name="textEdit_team_name">
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>50</height>
+              </size>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(203, 203, 203);
+    border-radius: 20px;        /* Promień zaokrąglenia */
+    padding: 10px;              /* Wewnętrzne marginesy */
+	border-color: rgb(0, 0, 0);
+font: 600 italic 10pt &quot;Segoe UI&quot;;
+</string>
+             </property>
+             <property name="acceptRichText">
+              <bool>false</bool>
+             </property>
+            </widget>
            </item>
            <item>
             <widget class="QLabel" name="label_4">
+             <property name="styleSheet">
+              <string notr="true">font: 600 italic 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);</string>
+             </property>
              <property name="text">
               <string>Enter your team acronym(3 letters):</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QTextEdit" name="textEdit_team_acronym"/>
+            <widget class="QTextEdit" name="textEdit_team_acronym">
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>50</height>
+              </size>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(203, 203, 203);
+    border-radius: 20px;        /* Promień zaokrąglenia */
+    padding: 10px;              /* Wewnętrzne marginesy */
+	border-color: rgb(0, 0, 0);
+font: 600 italic 10pt &quot;Segoe UI&quot;;
+</string>
+             </property>
+             <property name="acceptRichText">
+              <bool>false</bool>
+             </property>
+            </widget>
            </item>
            <item>
             <widget class="QPushButton" name="pushButton_confirm_next_page">
+             <property name="styleSheet">
+              <string notr="true">background-color:rgb(48, 48, 48);
+    border-radius: 15px;        /* Promień zaokrąglenia */
+    padding: 10px;              /* Wewnętrzne marginesy */
+font: 600 italic 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);
+</string>
+             </property>
              <property name="text">
               <string>Confirm</string>
              </property>
