--- a/LoadGame.ui
+++ b/LoadGame.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1052</width>
+    <width>1048</width>
     <height>839</height>
    </rect>
   </property>
@@ -15,6 +15,21 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
@@ -80,6 +95,11 @@
        </layout>
       </widget>
       <widget class="QWidget" name="page_game">
+       <property name="styleSheet">
+        <string notr="true">#page_game{
+background-image: url(:/new/prefix1/images/9b50e19f-8d5d-444b-a51f-debda13bcf8e.png);
+}</string>
+       </property>
        <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,3">
         <item>
          <widget class="QFrame" name="frame_buttons">
@@ -92,6 +112,19 @@
           <layout class="QVBoxLayout" name="verticalLayout_3">
            <item>
             <widget class="QPushButton" name="pushButton_play">
+             <property name="styleSheet">
+              <string notr="true">QPushButton{
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(141, 141, 141, 255), stop:1 rgba(43, 43, 43, 255));
+    border-radius: 15px;        /* Promień zaokrąglenia */
+    padding: 10px;              /* Wewnętrzne marginesy */
+font: 600 italic 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);
+border: 2px solid rgb(42, 42, 42);
+}
+QPushButton:hover {
+	background-color: rgb(29, 29, 29);
+}</string>
+             </property>
              <property name="text">
               <string>Play</string>
              </property>
@@ -99,6 +132,19 @@
            </item>
            <item>
             <widget class="QPushButton" name="pushButton_team">
+             <property name="styleSheet">
+              <string notr="true">QPushButton{
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(141, 141, 141, 255), stop:1 rgba(43, 43, 43, 255));
+    border-radius: 15px;        /* Promień zaokrąglenia */
+    padding: 10px;              /* Wewnętrzne marginesy */
+font: 600 italic 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);
+border: 2px solid rgb(42, 42, 42);
+}
+QPushButton:hover {
+	background-color: rgb(29, 29, 29);
+}</string>
+             </property>
              <property name="text">
               <string>Team</string>
              </property>
@@ -106,20 +152,39 @@
            </item>
            <item>
             <widget class="QPushButton" name="pushButton_table">
+             <property name="styleSheet">
+              <string notr="true">QPushButton{
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(141, 141, 141, 255), stop:1 rgba(43, 43, 43, 255));
+    border-radius: 15px;        /* Promień zaokrąglenia */
+    padding: 10px;              /* Wewnętrzne marginesy */
+font: 600 italic 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);
+border: 2px solid rgb(42, 42, 42);
+}
+QPushButton:hover {
+	background-color: rgb(29, 29, 29);
+}</string>
+             </property>
              <property name="text">
               <string>Table</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="pushButton_schedule">
-             <property name="text">
-              <string>Schedule</string>
-             </property>
-            </widget>
-           </item>
-           <item>
             <widget class="QPushButton" name="pushButton_save">
+             <property name="styleSheet">
+              <string notr="true">QPushButton{
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(141, 141, 141, 255), stop:1 rgba(43, 43, 43, 255));
+    border-radius: 15px;        /* Promień zaokrąglenia */
+    padding: 10px;              /* Wewnętrzne marginesy */
+font: 600 italic 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);
+border: 2px solid rgb(42, 42, 42);
+}
+QPushButton:hover {
+	background-color: rgb(29, 29, 29);
+}</string>
+             </property>
              <property name="text">
               <string>Save</string>
              </property>
@@ -127,6 +192,19 @@
            </item>
            <item>
             <widget class="QPushButton" name="pushButton_exit">
+             <property name="styleSheet">
+              <string notr="true">QPushButton{
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(141, 141, 141, 255), stop:1 rgba(43, 43, 43, 255));
+    border-radius: 15px;        /* Promień zaokrąglenia */
+    padding: 10px;              /* Wewnętrzne marginesy */
+font: 600 italic 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);
+border: 2px solid rgb(42, 42, 42);
+}
+QPushButton:hover {
+	background-color: rgb(29, 29, 29);
+}</string>
+             </property>
              <property name="text">
               <string>Exit</string>
              </property>
@@ -150,13 +228,16 @@
         </item>
         <item>
          <widget class="QFrame" name="frame_content">
+          <property name="styleSheet">
+           <string notr="true">background_color: transparent;</string>
+          </property>
           <property name="frameShape">
            <enum>QFrame::Shape::NoFrame</enum>
           </property>
           <property name="frameShadow">
            <enum>QFrame::Shadow::Plain</enum>
           </property>
-          <layout class="QVBoxLayout" name="verticalLayout_5" stretch="1,7">
+          <layout class="QVBoxLayout" name="verticalLayout_5" stretch="1,0">
            <item>
             <widget class="QFrame" name="frame_4">
              <property name="frameShape">
@@ -167,13 +248,43 @@
              </property>
              <layout class="QHBoxLayout" name="horizontalLayout_5">
               <item>
-               <widget class="QTextBrowser" name="label_date"/>
+               <widget class="QTextBrowser" name="label_date">
+                <property name="minimumSize">
+                 <size>
+                  <width>0</width>
+                  <height>50</height>
+                 </size>
+                </property>
+                <property name="styleSheet">
+                 <string notr="true">font: 600 italic 50pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);
+background-color: transparent;</string>
+                </property>
+                <property name="frameShape">
+                 <enum>QFrame::Shape::NoFrame</enum>
+                </property>
+                <property name="frameShadow">
+                 <enum>QFrame::Shadow::Plain</enum>
+                </property>
+                <property name="verticalScrollBarPolicy">
+                 <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
+                </property>
+                <property name="horizontalScrollBarPolicy">
+                 <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
+                </property>
+                <property name="sizeAdjustPolicy">
+                 <enum>QAbstractScrollArea::SizeAdjustPolicy::AdjustToContents</enum>
+                </property>
+               </widget>
               </item>
              </layout>
             </widget>
            </item>
            <item>
             <widget class="QFrame" name="frame_table_and_schedule">
+             <property name="styleSheet">
+              <string notr="true">background-color: transparent;</string>
+             </property>
              <property name="frameShape">
               <enum>QFrame::Shape::NoFrame</enum>
              </property>
@@ -183,8 +294,11 @@
              <layout class="QHBoxLayout" name="horizontalLayout_3">
               <item>
                <widget class="QStackedWidget" name="stackedWidget_content">
+                <property name="styleSheet">
+                 <string notr="true">background_color:transparent;</string>
+                </property>
                 <property name="currentIndex">
-                 <number>2</number>
+                 <number>1</number>
                 </property>
                 <widget class="QWidget" name="page_table">
                  <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -458,63 +572,6 @@
                   </item>
                  </layout>
                 </widget>
-                <widget class="QWidget" name="page_schedule">
-                 <layout class="QVBoxLayout" name="verticalLayout_4">
-                  <item>
-                   <widget class="QFrame" name="frame_2">
-                    <property name="frameShape">
-                     <enum>QFrame::Shape::NoFrame</enum>
-                    </property>
-                    <property name="frameShadow">
-                     <enum>QFrame::Shadow::Plain</enum>
-                    </property>
-                    <layout class="QHBoxLayout" name="horizontalLayout_4">
-                     <item>
-                      <widget class="QLabel" name="label_2">
-                       <property name="text">
-                        <string>Schedule</string>
-                       </property>
-                      </widget>
-                     </item>
-                    </layout>
-                   </widget>
-                  </item>
-                  <item>
-                   <widget class="QCalendarWidget" name="CustomCalendarWidget">
-                    <property name="locale">
-                     <locale language="English" country="UnitedStates"/>
-                    </property>
-                    <property name="selectedDate">
-                     <date>
-                      <year>2024</year>
-                      <month>9</month>
-                      <day>1</day>
-                     </date>
-                    </property>
-                    <property name="minimumDate">
-                     <date>
-                      <year>2024</year>
-                      <month>9</month>
-                      <day>1</day>
-                     </date>
-                    </property>
-                    <property name="maximumDate">
-                     <date>
-                      <year>2025</year>
-                      <month>6</month>
-                      <day>30</day>
-                     </date>
-                    </property>
-                    <property name="gridVisible">
-                     <bool>true</bool>
-                    </property>
-                    <property name="navigationBarVisible">
-                     <bool>true</bool>
-                    </property>
-                   </widget>
-                  </item>
-                 </layout>
-                </widget>
                 <widget class="QWidget" name="page_team">
                  <layout class="QHBoxLayout" name="horizontalLayout_7">
                   <item>
@@ -526,7 +583,7 @@
                      </size>
                     </property>
                     <property name="styleSheet">
-                     <string notr="true"/>
+                     <string notr="true">background_color: transparent;</string>
                     </property>
                     <property name="frameShape">
                      <enum>QFrame::Shape::NoFrame</enum>
@@ -953,7 +1010,11 @@ QLabel {
                   </item>
                  </layout>
                 </widget>
-                <widget class="QWidget" name="page_dummy"/>
+                <widget class="QWidget" name="page_dummy">
+                 <property name="styleSheet">
+                  <string notr="true">background_color: none;</string>
+                 </property>
+                </widget>
                </widget>
               </item>
              </layout>
