--- a/LoadGame.ui
+++ b/LoadGame.ui
@@ -248,32 +248,14 @@ QPushButton:hover {
              </property>
              <layout class="QHBoxLayout" name="horizontalLayout_5">
               <item>
-               <widget class="QTextBrowser" name="label_date">
-                <property name="minimumSize">
-                 <size>
-                  <width>0</width>
-                  <height>50</height>
-                 </size>
-                </property>
+               <widget class="QLabel" name="label_date">
                 <property name="styleSheet">
                  <string notr="true">font: 600 italic 50pt &quot;Segoe UI&quot;;
 color: rgb(255, 255, 255);
-background-color: transparent;</string>
+</string>
                 </property>
-                <property name="frameShape">
-                 <enum>QFrame::Shape::NoFrame</enum>
-                </property>
-                <property name="frameShadow">
-                 <enum>QFrame::Shadow::Plain</enum>
-                </property>
-                <property name="verticalScrollBarPolicy">
-                 <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
-                </property>
-                <property name="horizontalScrollBarPolicy">
-                 <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
-                </property>
-                <property name="sizeAdjustPolicy">
-                 <enum>QAbstractScrollArea::SizeAdjustPolicy::AdjustToContents</enum>
+                <property name="text">
+                 <string>TextLabel</string>
                 </property>
                </widget>
               </item>
