Definitywnie ostatnie zmiany.

--- a/LoadGame.ui
+++ b/LoadGame.ui
@@ -36,7 +36,7 @@
        <string notr="true"/>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="page_pick_file">
        <property name="styleSheet">
@@ -336,7 +336,7 @@ color: rgb(255, 255, 255);
                  <string notr="true">background_color:transparent;</string>
                 </property>
                 <property name="currentIndex">
-                 <number>0</number>
+                 <number>1</number>
                 </property>
                 <widget class="QWidget" name="page_table">
                  <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -363,7 +363,8 @@ color: rgb(255, 255, 255);
                        <property name="styleSheet">
                         <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(141, 141, 141, 255), stop:1 rgba(43, 43, 43, 255));
 font: 600 italic 10pt &quot;Segoe UI&quot;;
-color: rgb(255, 255, 255);</string>
+color: rgb(255, 255, 255);
+</string>
                        </property>
                        <property name="frameShape">
                         <enum>QFrame::Shape::StyledPanel</enum>
