--- a/NewGame.ui
+++ b/NewGame.ui
@@ -36,7 +36,7 @@
        <number>0</number>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="page_create_team">
        <property name="styleSheet">
@@ -235,7 +235,7 @@ border-radius: 5px;        /* Promień zaokrąglenia */
     padding: 1px;              /* Wewnętrzne marginesy */</string>
              </property>
              <property name="text">
-              <string>Enter your team acronym(3 letters):</string>
+              <string>Enter your team acronym (3 letters)</string>
              </property>
             </widget>
            </item>
